{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 614,
  "lineage": "ba9679d4-3fb3-3e2f-278e-310c8cdf4ab5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c05ab59e380dc512",
            "domain": "vpc",
            "id": "eipalloc-0c05ab59e380dc512",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-41-169-180.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.169.180",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064af6363aef616e8",
            "domain": "vpc",
            "id": "eipalloc-064af6363aef616e8",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-43-114-79.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.114.79",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058c067e067f2bbbb",
            "domain": "vpc",
            "id": "eipalloc-058c067e067f2bbbb",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-35-176-202-58.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.202.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb260c4d5475b901",
            "arn": "arn:aws:ec2:eu-west-2:811419387770:instance/i-0709f69f12226283a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0709f69f12226283a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "class2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06046aa50033b663a",
            "private_dns": "ip-192-168-0-12.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.12",
            "public_ip": "18.170.226.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b72bbf92b33bb139",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b752896abb3dd43",
            "tags": {
              "Name": "public-subnet1-instance"
            },
            "tags_all": {
              "Name": "public-subnet1-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9ba3b2203c5b204"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb260c4d5475b901",
            "arn": "arn:aws:ec2:eu-west-2:811419387770:instance/i-0fcea4d5a074a3598",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fcea4d5a074a3598",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "class2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0806e1b5e5ea24609",
            "private_dns": "ip-192-168-0-29.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.29",
            "public_ip": "18.130.229.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c81ed3983bf1dfce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060070f7ff2bf78ed",
            "tags": {
              "Name": "public-subnet2-instance"
            },
            "tags_all": {
              "Name": "public-subnet2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9ba3b2203c5b204"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb260c4d5475b901",
            "arn": "arn:aws:ec2:eu-west-2:811419387770:instance/i-04dead596d2c0f41b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04dead596d2c0f41b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "class2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed4de8727171b724",
            "private_dns": "ip-192-168-0-37.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.37",
            "public_ip": "3.8.22.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-028f8596998c430ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01fa574ab5da9467c",
            "tags": {
              "Name": "public-subnet3-instance"
            },
            "tags_all": {
              "Name": "public-subnet3-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9ba3b2203c5b204"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:internet-gateway/igw-041770b261121a28f",
            "id": "igw-041770b261121a28f",
            "owner_id": "811419387770",
            "tags": {
              "Name": "main",
              "automated": "yes"
            },
            "tags_all": {
              "Name": "main",
              "automated": "yes"
            },
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:loadbalancer/app/main-lb-tf/54ec3faccf28821b",
            "arn_suffix": "app/main-lb-tf/54ec3faccf28821b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-lb-tf-1585471972.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:loadbalancer/app/main-lb-tf/54ec3faccf28821b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a9ba3b2203c5b204"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b752896abb3dd43"
              },
              {
                "subnet_id": "subnet-01fa574ab5da9467c"
              },
              {
                "subnet_id": "subnet-060070f7ff2bf78ed"
              }
            ],
            "subnets": [
              "subnet-01b752896abb3dd43",
              "subnet-01fa574ab5da9467c",
              "subnet-060070f7ff2bf78ed"
            ],
            "vpc_id": "vpc-05b00342755a3445f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:listener/app/main-lb-tf/54ec3faccf28821b/858f0f3a4fd3f39d",
            "certificate_arn": "arn:aws:acm:eu-west-2:811419387770:certificate/80117ac2-65ff-424b-880b-7fe8dfbdadca",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:targetgroup/tf-main-lb-tg/6ea7fba998700484",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:listener/app/main-lb-tf/54ec3faccf28821b/858f0f3a4fd3f39d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:loadbalancer/app/main-lb-tf/54ec3faccf28821b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:targetgroup/tf-main-lb-tg/6ea7fba998700484",
            "arn_suffix": "targetgroup/tf-main-lb-tg/6ea7fba998700484",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:targetgroup/tf-main-lb-tg/6ea7fba998700484",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-main-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:targetgroup/tf-main-lb-tg/6ea7fba998700484-2023083113443141900000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:targetgroup/tf-main-lb-tg/6ea7fba998700484",
            "target_id": "i-0709f69f12226283a"
          },
          "dependencies": [
            "aws_instance.main",
            "aws_lb_target_group.main",
            "aws_security_group.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:targetgroup/tf-main-lb-tg/6ea7fba998700484-2023083113443139280000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:targetgroup/tf-main-lb-tg/6ea7fba998700484",
            "target_id": "i-0fcea4d5a074a3598"
          },
          "dependencies": [
            "aws_instance.main",
            "aws_lb_target_group.main",
            "aws_security_group.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:targetgroup/tf-main-lb-tg/6ea7fba998700484-2023083113443133580000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:811419387770:targetgroup/tf-main-lb-tg/6ea7fba998700484",
            "target_id": "i-04dead596d2c0f41b"
          },
          "dependencies": [
            "aws_instance.main",
            "aws_lb_target_group.main",
            "aws_security_group.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c05ab59e380dc512",
            "association_id": "eipassoc-0f296b6ff64450d4c",
            "connectivity_type": "public",
            "id": "nat-08dc0d508bb223bcd",
            "network_interface_id": "eni-0f5d82f62b8917fc4",
            "private_ip": "192.168.0.9",
            "public_ip": "13.41.169.180",
            "subnet_id": "subnet-01b752896abb3dd43",
            "tags": {
              "Name": "nat-gateway1"
            },
            "tags_all": {
              "Name": "nat-gateway1"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064af6363aef616e8",
            "association_id": "eipassoc-068ecaca830280b4c",
            "connectivity_type": "public",
            "id": "nat-07117aac80eea76ed",
            "network_interface_id": "eni-0ff9c977ed992107f",
            "private_ip": "192.168.0.20",
            "public_ip": "13.43.114.79",
            "subnet_id": "subnet-060070f7ff2bf78ed",
            "tags": {
              "Name": "nat-gateway2"
            },
            "tags_all": {
              "Name": "nat-gateway2"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058c067e067f2bbbb",
            "association_id": "eipassoc-0ef0d2ad4e420e8f3",
            "connectivity_type": "public",
            "id": "nat-0557fc25fc66b0b80",
            "network_interface_id": "eni-0df679cf1e84c0a72",
            "private_ip": "192.168.0.43",
            "public_ip": "35.176.202.58",
            "subnet_id": "subnet-01fa574ab5da9467c",
            "tags": {
              "Name": "nat-gateway3"
            },
            "tags_all": {
              "Name": "nat-gateway3"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-041770b261121a28f",
            "id": "r-rtb-0906e5b97a0b35cfc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0906e5b97a0b35cfc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-041770b261121a28f",
            "id": "r-rtb-02bb5c737d7d9aa961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02bb5c737d7d9aa96",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-041770b261121a28f",
            "id": "r-rtb-0c564ff355d9a54cc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c564ff355d9a54cc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:route-table/rtb-0906e5b97a0b35cfc",
            "id": "rtb-0906e5b97a0b35cfc",
            "owner_id": "811419387770",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public1-routes"
            },
            "tags_all": {
              "Name": "public1-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:route-table/rtb-02bb5c737d7d9aa96",
            "id": "rtb-02bb5c737d7d9aa96",
            "owner_id": "811419387770",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public2-routes"
            },
            "tags_all": {
              "Name": "public2-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:route-table/rtb-0c564ff355d9a54cc",
            "id": "rtb-0c564ff355d9a54cc",
            "owner_id": "811419387770",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public3-routes"
            },
            "tags_all": {
              "Name": "public3-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0917ec11b87fa87bf",
            "route_table_id": "rtb-0906e5b97a0b35cfc",
            "subnet_id": "subnet-01b752896abb3dd43"
          },
          "dependencies": [
            "aws_route_table.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03591d1fd2447a562",
            "route_table_id": "rtb-02bb5c737d7d9aa96",
            "subnet_id": "subnet-060070f7ff2bf78ed"
          },
          "dependencies": [
            "aws_route_table.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020d97d2810d07054",
            "route_table_id": "rtb-0c564ff355d9a54cc",
            "subnet_id": "subnet-01fa574ab5da9467c"
          },
          "dependencies": [
            "aws_route_table.main",
            "aws_subnet.main_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:security-group/sg-0a9ba3b2203c5b204",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "access to the internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9ba3b2203c5b204",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "811419387770",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:subnet/subnet-0255845d3f5fa4569",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "192.168.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0255845d3f5fa4569",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811419387770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet1"
            },
            "tags_all": {
              "Name": "private-subnet1"
            },
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:subnet/subnet-041eb99a837ba0a2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "192.168.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041eb99a837ba0a2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811419387770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet2"
            },
            "tags_all": {
              "Name": "private-subnet2"
            },
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:subnet/subnet-0dc5c00ac0c4eb105",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "192.168.0.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc5c00ac0c4eb105",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811419387770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet3"
            },
            "tags_all": {
              "Name": "private-subnet3"
            },
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:subnet/subnet-01b752896abb3dd43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "192.168.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b752896abb3dd43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811419387770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:subnet/subnet-060070f7ff2bf78ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "192.168.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060070f7ff2bf78ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811419387770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:subnet/subnet-01fa574ab5da9467c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "192.168.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fa574ab5da9467c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811419387770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05b00342755a3445f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:811419387770:vpc/vpc-05b00342755a3445f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0764e47ffff0b4a0e",
            "default_route_table_id": "rtb-01f155e57c8173be2",
            "default_security_group_id": "sg-0eb1013f97b8412ed",
            "dhcp_options_id": "dopt-0adccad7b5b104eca",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b00342755a3445f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f155e57c8173be2",
            "owner_id": "811419387770",
            "tags": {
              "Name": "main",
              "automated": "yes"
            },
            "tags_all": {
              "Name": "main",
              "automated": "yes"
            }
          }
        }
      ]
    }
  ]
}